- CSG spans method working \n - CSG Parser working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,12 @@ project(csgrn)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+add_library(csgrn_lib INTERFACE)
+target_include_directories(csgrn_lib INTERFACE 
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>
+)
+
 add_executable(csgrn
     src/main.cpp
     src/glad.c
@@ -14,8 +20,6 @@ file(COPY ${CMAKE_SOURCE_DIR}/src/shaders
 
 add_subdirectory(vendor/glfw)
 
-target_include_directories(csgrn PRIVATE include)
 find_package(OpenGL REQUIRED)
 
-target_link_libraries(csgrn PRIVATE glfw OpenGL::GL)
-
+target_link_libraries(csgrn PRIVATE csgrn_lib glfw OpenGL::GL)
